apps/adventurelog/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-backend
  namespace: adventurelog
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: adventurelog-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog-backend
  namespace: adventurelog
spec:
  replicas: 1
  selector:
    matchLabels: {app: adventurelog-backend}
  template:
    metadata:
      labels: {app: adventurelog-backend}
    spec:
      containers:
      - name: backend
        image: ghcr.io/seanmorley15/adventurelog-backend:latest
        volumeMounts:
        - name: media
          mountPath: /code/media
        ports:
        - containerPort: 80
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: adventurelog-media
