apps/adventurelog/base/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-db
  namespace: adventurelog
spec:
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: adventurelog-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adventurelog-db
  namespace: adventurelog
spec:
  serviceName: adventurelog-db
  replicas: 1
  selector:
    matchLabels:
      app: adventurelog-db
  template:
    metadata:
      labels:
        app: adventurelog-db
    spec:
      containers:
      - name: db
        image: postgis/postgis:16-3.5
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adventurelog-db
