apps/adventurelog/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adventurelog
  namespace: adventurelog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
  - host: travel.infrazone.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adventurelog-frontend
            port:
              number: 80
  tls:
  - hosts: [travel.infrazone.cc]
    secretName: adventurelog-tls
